@@ -16,8 +16,7 @@ import javax.crypto.SecretKey;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 public class OTPUtiles {
 	
@@ -45,11 +44,11 @@ public class OTPUtiles {
             X509EncodedKeySpec keySpecX509 = new X509EncodedKeySpec(publicKey.getEncoded());
             KeyFactory keyFactory = KeyFactory.getInstance("RSA");
             PublicKey pubKey = keyFactory.generatePublic(keySpecX509);
-            String strPublicKey = new BASE64Encoder().encode(pubKey.getEncoded());//Base64Util.getEncData(pubKey.getEncoded());
+            String strPublicKey = Base64.getEncoder().encodeToString(pubKey.getEncoded());//Base64Util.getEncData(pubKey.getEncoded());
 
             PKCS8EncodedKeySpec keySpecPKCS8 = new PKCS8EncodedKeySpec(privateKey.getEncoded());
             PrivateKey privKey = keyFactory.generatePrivate(keySpecPKCS8);
-            String strPrivateKey = new BASE64Encoder().encode(privKey.getEncoded());//Base64Util.getEncData(privKey.getEncoded());
+            String strPrivateKey = Base64.getEncoder().encodeToString(privKey.getEncoded());//Base64Util.getEncData(privKey.getEncoded());
 
             rsaKeyPair[0] = strPublicKey;
             rsaKeyPair[1] = strPrivateKey;
@@ -62,12 +61,12 @@ public class OTPUtiles {
 	public static String getEncryptRSAFromPublicKey(String input, String strPublicKey) {
 		String strCipher = null;
 		try {
-			byte[] baPublicKey = new BASE64Decoder().decodeBuffer(strPublicKey);//Base64Util.getDecData(strPublicKey);
+			byte[] baPublicKey = Base64.getDecoder().decode(strPublicKey);//Base64Util.getDecData(strPublicKey);
 			PublicKey publicKey = KeyFactory.getInstance("RSA").generatePublic(new X509EncodedKeySpec(baPublicKey));
 			Cipher clsCipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
 			clsCipher.init(Cipher.ENCRYPT_MODE, publicKey);
 			byte[] baCipherData = clsCipher.doFinal(input.getBytes());
-			strCipher = new BASE64Encoder().encode(baCipherData);//Base64Util.getEncData(baCipherData);
+			strCipher = Base64.getEncoder().encodeToString(baCipherData);//Base64Util.getEncData(baCipherData);
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
@@ -77,8 +76,8 @@ public class OTPUtiles {
 	public static String getDecryptRSAFromPrivateKey(String input, String strPrivateKey) {
 		String strResult = null;
 		try {
-			byte[] encrypted = new BASE64Decoder().decodeBuffer(input);//Base64Util.getDecData(input.getBytes());
-			byte[] baPrivateKey = new BASE64Decoder().decodeBuffer(strPrivateKey);//Base64Util.getDecData(strPrivateKey.getBytes());
+			byte[] encrypted = Base64.getDecoder().decode(input);//Base64Util.getDecData(input.getBytes());
+			byte[] baPrivateKey = Base64.getDecoder().decode(strPrivateKey);//Base64Util.getDecData(strPrivateKey.getBytes());
 			PrivateKey privateKey = KeyFactory.getInstance("RSA").generatePrivate(new PKCS8EncodedKeySpec(baPrivateKey));
 			Cipher clsCipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
 			clsCipher.init(Cipher.DECRYPT_MODE, privateKey);
@@ -93,12 +92,12 @@ public class OTPUtiles {
 	public static String getEncryptRSAFromPrivateKey(String input, String strPrivateKey) {
 		String strCipher = null;
 		try {
-			byte[] baPrivateKey = new BASE64Decoder().decodeBuffer(strPrivateKey);//Base64Util.getDecData(strPrivateKey);
+			byte[] baPrivateKey = Base64.getDecoder().decode(strPrivateKey);//Base64Util.getDecData(strPrivateKey);
 			PrivateKey privateKey = KeyFactory.getInstance("RSA").generatePrivate(new PKCS8EncodedKeySpec(baPrivateKey));
 			Cipher clsCipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
 			clsCipher.init(Cipher.ENCRYPT_MODE, privateKey);
 			byte[] baCipherData = clsCipher.doFinal(input.getBytes());
-			strCipher = new BASE64Encoder().encode(baCipherData);//Base64Util.getEncData(baCipherData);
+			strCipher = Base64.getEncoder().encodeToString(baCipherData);//Base64Util.getEncData(baCipherData);
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
@@ -108,8 +107,8 @@ public class OTPUtiles {
 	public static String getDecryptRSAFromPublicKey(String input, String strPublicKey) {
 		String strResult = null;
 		try {
-			byte[] encrypted = new BASE64Decoder().decodeBuffer(input);//Base64Util.getDecData(input.getBytes());
-			byte[] baPublicKey = new BASE64Decoder().decodeBuffer(strPublicKey);//Base64Util.getDecData(strPublicKey.getBytes());
+			byte[] encrypted = Base64.getDecoder().decode(input);//Base64Util.getDecData(input.getBytes());
+			byte[] baPublicKey = Base64.getDecoder().decode(strPublicKey);//Base64Util.getDecData(strPublicKey.getBytes());
 			PublicKey publicKey = KeyFactory.getInstance("RSA").generatePublic(new X509EncodedKeySpec(baPublicKey));
 			Cipher clsCipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
 			clsCipher.init(Cipher.DECRYPT_MODE, publicKey);
@@ -131,7 +130,7 @@ public class OTPUtiles {
 			Cipher c = Cipher.getInstance("AES/CBC/PKCS5Padding");
 			c.init(Cipher.ENCRYPT_MODE, secureKey, new IvParameterSpec(strIV.getBytes()));
 			byte[] encrypted = c.doFinal(strTarget.getBytes("UTF-8"));
-			strRet = new BASE64Encoder().encode(encrypted);//Base64Util.getEncData(encrypted);
+			strRet = Base64.getEncoder().encodeToString(encrypted);//Base64Util.getEncData(encrypted);
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
@@ -147,7 +146,7 @@ public class OTPUtiles {
 			SecretKey secureKey = new SecretKeySpec(key, "AES");
 			Cipher c = Cipher.getInstance("AES/CBC/PKCS5Padding");
 			c.init(Cipher.DECRYPT_MODE, secureKey, new IvParameterSpec(strIV.getBytes("UTF-8")));
-			byte[] byteStr = new BASE64Decoder().decodeBuffer(encrypted);//Base64Util.getDecData(encrypted);
+			byte[] byteStr = Base64.getDecoder().decode(encrypted);//Base64Util.getDecData(encrypted);
 			strRet = new String(c.doFinal(byteStr),"UTF-8");
 		} catch (Exception e) {
 			e.printStackTrace();
